# unordered_dense

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ankerl_unordered_dense.natvis  boost-unordered_flat_map-notes.md  compile_commands.json  meson.build  requirements.txt  xmake.lua
.github/: copilot-instructions.md
.github/workflows/: main.yml
debugger/visualizers/: unordered_dense.natvis
doc/: latency.gnuplot
example/: main.cpp
handoff/: 2026-07-08_1030-map-performance-optimization.md
include/: boost
include/ankerl/: stl.h  unordered_dense.h  unordered_dense_map.h
scripts/: build.py  fuzz_merge.sh  fuzz_run.sh  setup.sh  test.sh
scripts/lint/: all.py  lint-clang-format.py  lint-clang-tidy.py  lint-stdint-types-modules.py  lint-version.py
scripts/microbench/: README.md  ab.sh  micro.cpp
src/: ankerl.unordered_dense.cpp
subprojects/: doctest.wrap
test/: meson.build
test/app/: Counter.cpp  Counter.h  VecTester.h  checksum.h  counter.cpp  counter.h  doctest.cpp  doctest.h  name_of_type.h  nanobench.cpp  print.h  stacktrace.cpp
test/app/ui/: Periodic.cpp  Periodic.h  ProgressBar.cpp  ProgressBar.h
test/bench/: copy.cpp  find_random.cpp  game_of_life.cpp  latency_distribution.cpp  quick_overall_map.cpp  replace_key.cpp  show_allocations.cpp  swap.cpp
test/fuzz/: Fuzz.h  Provider.h  api.cpp  api.h  insert_erase.cpp  insert_erase.h  main.cpp  provider.h  replace.cpp  replace.h  string.cpp  string.h
test/natvis/: main.cpp  natvis_demo.sln  natvis_demo.vcxproj  natvis_demo.vcxproj.filters
test/unit/: array_of_maps.cpp  assign_to_move.cpp  assignment_combinations.cpp  at.cpp  bucket.cpp  contains.cpp  copy_and_assign_maps.cpp  copyassignment.cpp  count.cpp  ctors.cpp  custom_container.cpp  custom_container_boost.cpp  custom_hash.cpp  deduction_guides.cpp  diamond.cpp  empty.cpp  equal_range.cpp  erase.cpp  erase_if.cpp  erase_range.cpp  explicit.cpp  extract.cpp  fuzz_corpus.cpp  hash.cpp  hash_char_types.cpp  hash_smart_ptr.cpp  hash_string_view.cpp  include_only.cpp  initializer_list.cpp  initializer_list_insert.cpp  initializerlist.cpp  insert.cpp  insert_or_assign.cpp  is_avalanching_inheritence.cpp  iterators_empty.cpp  iterators_erase.cpp  iterators_insert.cpp  load_factor.cpp  maps_of_maps.cpp  max.cpp  (+29 more)
